--- a/src/Styles/Section.module.css
+++ b/src/Styles/Section.module.css
@@ -15,6 +15,7 @@
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.6);
   width: 100%;
+  padding-top: 20px;
 }
 .container h1:hover {
   background-color: #0c2233;
