--- a/src/Styles/Section.module.css
+++ b/src/Styles/Section.module.css
@@ -78,8 +78,17 @@
 }
 .devTech {
   display: flex;
-  width: 100vw;
+  /* width: 100vw; */
   flex-wrap: wrap;
+
+  display: grid;
+  width: 75%;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  row-gap: 25px;
+  position: relative;
+  margin: 0 auto;
+  top: 30px;
+  padding-bottom: 30px;
 }
 .projects {
   display: flex;
