--- a/src/Styles/Section.module.css
+++ b/src/Styles/Section.module.css
@@ -119,21 +119,24 @@
   font-family: "Montserrat";
   font-weight: 400;
   font-size: 14px;
-  margin-top: 15px;
+  margin-top: 5px;
   text-align: center;
-  color: #272f4d;
+  color: #fff;
 }
 .imgCont {
   display: flex;
 }
 .projectContainer {
   display: flex;
-  padding: 10px;
+  /* padding: 10px; */
   border-radius: 10px;
   width: 20vw;
   height: fit-content;
   cursor: pointer;
-  background-color: #fff;
+  background-color: transparent;
+  border: solid 1px #fff;
+  padding-bottom: 10px;
+  overflow: hidden;
 }
 .seeMore {
   margin-top: 50px;
