--- a/src/Styles/Section.module.css
+++ b/src/Styles/Section.module.css
@@ -121,7 +121,7 @@
   font-size: 14px;
   margin-top: 5px;
   text-align: center;
-  color: #fff;
+  color: #0c2233;
 }
 .imgCont {
   display: flex;
