--- a/src/Styles/Footer.module.css
+++ b/src/Styles/Footer.module.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: #2f3c5a;
+  background-color: rgb(32, 83, 126);
   display: flex;
   align-items: center;
   padding-top: 15px;
