--- a/src/Styles/Nav.module.css
+++ b/src/Styles/Nav.module.css
@@ -83,7 +83,7 @@
     position: absolute;
     right: 0;
     top: 0px;
-    background-color: #0c2233;
+    background-color: #192a51;
     padding: 10px;
     padding-right: 20px;
     transition: all 0.5s ease-out;
