--- a/src/Styles/Contact.module.css
+++ b/src/Styles/Contact.module.css
@@ -106,6 +106,65 @@ textarea {
   float: right !important;
   margin-top: -15px;
 }
+.hiddenMsg {
+  display: none;
+}
+.msgContainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  margin-top: 300px;
+  z-index: 900;
+}
+.background {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: rgb(0, 0, 0, 0.7);
+  top: 0;
+  left: 0;
+}
+.msg {
+  width: 30vw;
+  height: fit-content;
+  border-radius: 8px;
+  background-color: #152447;
+  padding: 20px;
+}
+.msg h1,
+.msg p {
+  color: #fff;
+  font-family: "Montserrat";
+  text-align: center;
+  margin-bottom: 20px;
+}
+.msg h1 {
+  margin-bottom: 10px;
+}
+.msg p {
+  font-weight: 200;
+}
+.btnCont {
+  display: flex;
+}
+.msg button {
+  padding: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  border: solid 1px rgb(32, 83, 126);
+  border-radius: 5px;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+}
+.msg button:hover {
+  background-color: rgb(32, 83, 126);
+  transition: 0.15s ease-in-out;
+}
 @media screen and (max-width: 767px) {
   .headerForm {
     width: 90vw;
@@ -120,5 +179,11 @@ textarea {
   }
   .errorLabel {
     margin-top: -20px;
+  }
+  .msg {
+    width: 90vw;
+  }
+  .msg p {
+    width: 60vw;
   }
 }
