--- a/src/Styles/Nav.module.css
+++ b/src/Styles/Nav.module.css
@@ -189,10 +189,13 @@
     border-top: none;
     border-left: none;
     width: 100vw;
-    height: 30px;
-    font-size: 16px;
-    font-weight: 600;
-    color: #14203d;
+    height: 50px;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-weight: 500;
+    color: #192a51;
+    border: none;
     background-color: #fff;
   }
 }
