--- a/src/Styles/Contact.module.css
+++ b/src/Styles/Contact.module.css
@@ -115,14 +115,14 @@ textarea {
   justify-content: center;
   position: absolute;
   margin-top: 300px;
-  z-index: 900;
+  z-index: 900 !important;
 }
 .background {
-  position: fixed;
   height: 100%;
   width: 100%;
   background-color: rgb(0, 0, 0, 0.7);
   top: 0;
+  position: fixed;
   left: 0;
 }
 .msg {
