--- a/src/Styles/Nav.module.css
+++ b/src/Styles/Nav.module.css
@@ -94,28 +94,28 @@
     height: 50px;
   }
   .menu {
-    margin-right: 0px;
+    /* margin-right: 0px; */
     position: relative;
     top: 15px;
+    position: absolute;
+    left: 0;
+    z-index: 900 !important;
   }
   .menu ul {
     display: block;
     height: 100vh;
     width: 50vw;
-    position: absolute;
-    right: 0;
-    top: 0px;
     background-color: #192a51;
     padding: 10px;
-    padding-right: 20px;
-    padding-top: 50px;
+    padding-left: 30px;
+    padding-top: 80px;
     transition: all 0.5s ease-out;
     box-shadow: -5px 3px 12px 0px rgba(0, 0, 0, 0.3);
   }
 
   .menu li {
     margin: 0;
-    text-align: right;
+    text-align: left;
     padding: 0;
     margin-bottom: 5px;
     width: 100%;
@@ -123,14 +123,14 @@
   .icons {
     display: flex;
     width: fit-content;
-    margin-right: 0;
+    margin-left: 0;
     margin-top: 20px;
   }
   .icons svg {
-    margin-left: 10px;
+    margin-right: 10px;
   }
   .hide {
-    margin-right: 0px;
+    margin-left: 0px;
     position: relative;
     top: 15px;
   }
@@ -141,10 +141,9 @@
     height: 100vh;
     width: 25vw;
     position: absolute;
-    right: 0;
     background-color: transparent;
     padding: 10px;
-    right: 0px;
+    left: 0px;
     top: 0px;
   }
 
@@ -166,6 +165,9 @@
     cursor: pointer;
     z-index: 600;
   }
+  .brand {
+    z-index: 960 !important;
+  }
   .brand h3 {
     margin-top: 0px;
     left: 10px;
@@ -178,7 +180,7 @@
   .menuContainer {
     display: flex;
     position: absolute;
-    right: 0px;
+    left: 0px;
   }
   .lang {
     position: fixed;
@@ -197,5 +199,13 @@
     color: #192a51;
     border: none;
     background-color: #fff;
+    z-index: 950 !important;
+  }
+  .menuBackground {
+    background-color: rgb(0, 0, 0, 0.5);
+    width: 100vw;
+    top: 50px;
+    height: 100vh;
+    position: fixed;
   }
 }
